--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ventas Habana | Tu Tienda Online en Cuba</title>
+  <title>Cuba Click | Compra fácil en Cuba</title>
   <meta name="description"
     content="La mejor tienda online para comprar productos en La Habana con entrega a domicilio. Pagos en USD, MLC y CUP." />
 </head>
